p2/config/web.yaml

# Web applications conf 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1
  labels:
    app: app-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-1
  template:
    metadata:
      labels:
        app: app-1
    spec:
      containers:
      - name: app-1
        image: paulbouwer/hello-kubernetes:1.10
        imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2
  labels:
    app: app-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-2
  template:
    metadata:
      labels:
        app: app-2
    spec:
      containers:
      - name: app-2
        image: paulbouwer/hello-kubernetes:1.10
        imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-3
  labels:
    app: app-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-3
  template:
    metadata:
      labels:
        app: app-3
    spec:
      containers:
      - name: app-3
        image: paulbouwer/hello-kubernetes:1.10
        imagePullPolicy: IfNotPresent
---

# Routing services 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: "app1.com"
      http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: app-1
                  port:
                    number: 80
    - host: "app2.com"
      http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: app-2
                  port:
                    number: 80
    - host: "app3.com"
      http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: app-3
                  port:
                    number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-3
                port:
                  number: 80
---

# Services 
---
apiVersion: v1
kind: Service
metadata:
  name: app-1
  labels:
    app: app-1
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: app-1
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: app-2
  labels:
    app: app-2
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: app-2
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: app-3
  labels:
    app: app-3
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: app-3
  type: NodePort
---
